tests/ui/asm/x86_64/srcloc.new.stderr
error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:14:15
   |
LL |         asm!("invalid_instruction");
   |               ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:18:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:23:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:29:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:36:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:41:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

warning: scale factor without index register is ignored
  --> $DIR/srcloc.rs:44:15
   |
LL |         asm!("movaps %xmm3, (%esi, 2)", options(att_syntax));
   |               ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:1:23
   |
LL |     movaps %xmm3, (%esi, 2)
   |                          ^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:48:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:54:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:61:14
   |
LL |             "invalid_instruction",
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:68:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:75:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:82:14
   |
LL |             "invalid_instruction1",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:83:14
   |
LL |             "invalid_instruction2",
   |              ^^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:89:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:89:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:98:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:98:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:102:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:102:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:113:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:113:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction1", "\n",
LL | |                 "invalid", "_", "instruction2", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:117:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:117:13
   |
LL | /             concat!(
LL | |                 "invalid", "_", "instruction3", "\n",
LL | |                 "invalid", "_", "instruction4", "\n",
LL | |             ),
   | |_____________^
   |
note: instantiated into assembly here
  --> <inline asm>:6:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:130:14
   |
LL |             "invalid_instruction"
   |              ^^^^^^^^^^^^^^^^^^^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to 24 previous errors; 1 warning emitted

